<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:orientation="vertical">

      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:src="@drawable/business"
             tools:ignore="ContentDescription" />

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_will_be_success_tomorrow"
                android:textSize="25sp"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lets_be_a_influencer"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indonesia_17_agustus_2020"
                android:layout_marginStart="16dp"
                android:layout_marginTop="110dp"
                android:textColor="@android:color/white"
                android:background="#4D000000"/>


         </LinearLayout>


      </FrameLayout>

      <androidx.cardview.widget.CardView
          android:id="@+id/cv1"
          android:layout_width="match_parent"
          android:layout_height="130dp"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:cardCornerRadius="10dp"
          android:elevation="10dp"
          android:onClick="marketPlace">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <ImageView
                android:id="@+id/im1"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:src="@drawable/pixel_google"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_centerVertical="true"
               android:layout_toEndOf="@+id/im1"
                android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="7dp"
                android:text="@string/market"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:layout_marginBottom="7dp"
                   android:fontFamily="sans-serif"
                   android:text="@string/lets_get_this_phone_for_your_better_future"
                   android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                   android:textColor="@android:color/black"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:typeface="normal" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/jombang_17_agustus_2020"
                   android:layout_marginStart="20dp"/>

            </LinearLayout>

         </RelativeLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/cv2"
          android:layout_width="match_parent"
          android:layout_height="130dp"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:cardCornerRadius="10dp"
          android:elevation="10dp">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <ImageView
                android:id="@+id/im2"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:src="@drawable/journey"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/im2"
                android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_marginStart="20dp"
                   android:layout_marginBottom="7dp"
                   android:text="@string/journey"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:layout_marginBottom="7dp"
                   android:fontFamily="sans-serif"
                   android:text="@string/lets_go_travel_to_own_futuristic_city"
                   android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                   android:textColor="@android:color/black"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:typeface="normal" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/surabaya_11_agustus_2020"
                   android:layout_marginStart="20dp"/>

            </LinearLayout>

         </RelativeLayout>

      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:elevation="10dp"
          android:id="@+id/cv3"
          android:layout_width="match_parent"
          android:layout_height="130dp"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:cardCornerRadius="10dp">

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">

            <ImageView
                android:id="@+id/im3"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:src="@drawable/cewek_soldier"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/im3"
                android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:layout_marginStart="20dp"
                   android:layout_marginBottom="7dp"
                   android:text="@string/soldier"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:layout_marginBottom="7dp"
                   android:fontFamily="sans-serif"
                   android:text="@string/now_our_city_is_secure"
                   android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                   android:textColor="@android:color/black"
                   android:textSize="20sp"
                   android:textStyle="bold"
                   android:typeface="normal" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/bengkulu_20_agustus_2020"
                   android:layout_marginStart="20dp"/>

            </LinearLayout>

         </RelativeLayout>

      </androidx.cardview.widget.CardView>

   </LinearLayout>

</ScrollView>